2003-11-05  James Henstridge  <james@daa.com.au>

	* modulesets/freedesktop.modules (libxklavier): add here.

2003-11-05  Johan Dahlin  <johan@gnome.org>

	* modulesets/freedesktop.modules: Add support for all libs on
	xlibs.freedesktop.org and xserver. Also reorganize the file a bit.

2003-11-04  Johan Dahlin  <johan@gnome.org>

	* cvs.py (login): Allow empty newlines in .cvspass

2003-11-04  Murray Cumming  <murrayc@usa.net>

	* modulesets/gnome26.modules: Removed gal dependency from gtkhtml,
	because it does not seem to need it, which is nice because gal does
	not build with GTK+ 2.3.

Fri Oct 31 18:52:52 2003  Jonathan Blandford  <jrb@gnome.org>

	* jhbuild.py (addpath): add XDG_DATA_DIRS to the list of
	environment variables.

Fri Oct 31 18:09:41 2003  Jonathan Blandford  <jrb@gnome.org>

	* modulesets/gnome26.modules: change libgda/libgnomedb to be built
	against HEAD as that's what mergeant requires.

	* modulesets/gnome26.modules: remove monkey-media

	* modulesets/gnome26.modules: remove drwright.

Fri Oct 31 13:22:24 2003  Jonathan Blandford  <jrb@gnome.org>

	* modulesets/gnome26.modules: use gstreamer HEAD as gnome-media
	now depends on it.

2003-10-30  Murray Cumming  <murrayc@usa.net>

	* modulesets/gnome24.modules: Use gnome-2-4 branches for
	gconfmm, libglademm, libgnomemm, libgnomeuimm.

2003-10-28  Jody Goldberg <jody@gnome.org>

	* modulesets/gnome26.modules : add libxklavier for and to
	  gnome-control-center.

2003-10-24  James Henstridge  <james@daa.com.au>

	* sample.jhbuildrc (moduleset): same here.

	* vbs-head.jhbuildrc (moduleset): switch to gnome 2.6.

	* bootstrap.py (bootstraps): temporarily point it somewhere else
	for libtool-1.5.tar.gz

2003-10-22  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: use gnome-2-4 branch of gtkhtml2.

2003-10-21  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: bug-buddy, libgtop, procman, gdm2,
	gucharmap, gtksourceview, gpdf updated revision to gnome-2-4;