@@ -1,3 +1,8 @@
+2003-11-05  Johan Dahlin  <johan@gnome.org>
+
+	* jhbuild.py (read_config_file): Nicer error message when there is
+	no jhbuildrc.	
+
 2003-11-05  James Henstridge  <james@daa.com.au>
 
 	* modulesets/freedesktop.modules (libxklavier): add here.
